:art: fix #2 title alignment

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -43,7 +43,6 @@ h1, .h1{
     font-size: 4.5rem;
     line-height: 1;
     letter-spacing: -0.02em;
-    text-align: center;
     &.small-m, &.align-small{
         margin-bottom: 1em;
     }
