--- a/src/scss/layout/_blog.scss
+++ b/src/scss/layout/_blog.scss
@@ -42,7 +42,6 @@
 
 .post-single-header{
     margin-bottom: 4.4em;
-    text-align: center;
 }
 
 .blog-title{
