--- a/src/scss/pages/_home.scss
+++ b/src/scss/pages/_home.scss
@@ -13,6 +13,7 @@
     font-family: $fira-bold;
     font-size: 4.5rem;
     word-wrap: break-word;
+    text-align: center;
     opacity: 0;
 }
 
